--- a/midnight.css
+++ b/midnight.css
@@ -201,6 +201,26 @@ div.message_d5deea.replying_d5deea::before /* change reply message bar to neutra
   width: calc(100% + 4px);
   transition: border-color 0.3s;
 }
+.chatContent_f087cb,
+.membersWrap__5ca6b,
+.container__7e23c,
+.panels__58331,
+.guilds__2b93a {
+  border: 2px solid transparent;
+  transition: border-color 0.3s;
+}
+.membersWrap__5ca6b {
+  border-radius: 0 0 var(--roundness-xl) var(--roundness-xl);
+}
+.chatContent_f087cb::before,
+.membersWrap__5ca6b::before {
+  border: 2px solid transparent;
+  box-sizing: border-box;
+  border-bottom: none;
+  left: -2px;
+  width: calc(100% + 4px);
+  transition: border-color 0.3s;
+}
 .chatContent_f087cb:hover, 
 .chatContent_f087cb:hover::before,
 .membersWrap__5ca6b:hover,
