--- a/snippet.css
+++ b/snippet.css
@@ -2,3 +2,7 @@
 	content: 'Test';
 	display: block;
 }
+.animatedContainer_fd6364 {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
