--- a/snippet.css
+++ b/snippet.css
@@ -6,3 +6,14 @@
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
+.custom-profile-theme .container_e5a42d {
+  background-color: none;
+  background: none;
+  border: none;
+}
+
+.container_e5a42d {
+  background-color: none;
+  background: none;
+  border: none;
+}
