--- a/snippet.css
+++ b/snippet.css
@@ -1,3 +1,4 @@
+@import url('https://raw.githubusercontent.com/hourfrozen/radiumproject/main/midnight.css');
 .info_c5a741 .line_c5a741:last-child:after {
 	content: 'Test';
 	display: block;
