--- a/snippet.css
+++ b/snippet.css
@@ -1,20 +1,12 @@
 @import url('https://raw.githubusercontent.com/hourfrozen/radiumproject/main/midnight.css');
-.info_c5a741 .line_c5a741:last-child:after {
-	content: 'Test';
-	display: block;
-}
-.animatedContainer_fd6364 {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-}
-.custom-profile-theme .container_e5a42d {
-  background-color: none;
-  background: none;
-  border: none;
-}
-
-.container_e5a42d {
-  background-color: none;
-  background: none;
-  border: none;
+#app-mount .container_ee69e0 /* channel list */,
+.privateChannels_f0963d /* dms list */,
+.members_cbd271 /* member list inner */,
+.member_a31c43 /* member list members */,
+#app-mount {
+	// Version info
+	.info_c5a741 .line_c5a741:last-child:after {
+		content: 'RadialStatus ' var(--rs-version);
+		display: block;
+	}
 }
