--- a/snippet.css
+++ b/snippet.css
@@ -5,9 +5,11 @@
 .member_a31c43 /* member list members */,
 --rad-version: '1.0.5';
 #app-mount {
+        .wrapper_c51b4e {
 	// Version info
 	.info_c5a741 .line_c5a741:last-child:after {
 		content: 'Test ' var(--rad-version);
 		display: block;
+	}
 	}
 }
