--- a/testsnippets.css
+++ b/testsnippets.css
@@ -1,13 +1,12 @@
-.inlineCode__0cacf,
-.before_inlineCode__48f7c,
-.after_inlineCode__59586 {
-  background-color: var(--textarea-block-color);
-}
-
-.inlineCode__0cacf {
-  color: var(--textarea-block-text-color);
-}
-
-:root{
---textarea-block-color: rgba(20,22,26,1);
+.embed_d3cbe3 { position: relative; }
+.embed_d3cbe3::after {
+    content: '';
+    position: absolute;
+    top: 0px; left: -4px; bottom: 0px;
+    width: 100%;
+    border-radius: var(--roundness-m);
+    border: 4px solid transparent;
+    border-left-color: inherit;
+    filter: blur(15px);
+    z-index: -1;
 }
