--- a/testsnippets.css
+++ b/testsnippets.css
@@ -10,3 +10,12 @@
     filter: blur(15px);
     z-index: -1;
 }
+.message__80c10.mentioned__58017::before,
+.replying_d7b6ad::before {
+    width: 4px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 20px 0px var(--accent-3);
+}
+div.message__80c10.replying_d7b6ad::before {
+    box-shadow: 0px 0px 20px 0px var(--text-2);
+}
