--- a/minilist.css
+++ b/minilist.css
@@ -1,4 +1,5 @@
 /* minified memberlist (midnight theme version) */
+/* commit changes you piece of trash - hour */
 :root {
 	--collapsed: 220px;
 	--expanded: 240px;
