--- a/hl.css
+++ b/hl.css
@@ -27,3 +27,8 @@
 .guilds_a4d4d9:hover {
   border-color: var(--accent-3);
 }
+  .item_f9d377 {
+    width: 5px;
+    border-radius: 7px;
+    margin-left: 7px;
+  }
