--- a/smth.css
+++ b/smth.css
@@ -1,10 +1,10 @@
-.inlineCode__0cacf,
-.before_inlineCode__48f7c,
-.after_inlineCode__59586 {
+.inlineCode_cdb578,
+.before_inlineCode_cdb578,
+.after_inlineCode_cdb578 {
   background-color: var(--textarea-block-color);
 }
 
-.inlineCode__0cacf {
+.inlineCode_cdb578 {
   color: var(--textarea-block-text-color);
 }
 
